...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="MTE-X3-ym1" userLabel="logOutputTextView">
                                <rect key="frame" x="16" y="0.0" width="343" height="667"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" label="DeepLinkData"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="i3m-ex-Bu1" id="4fX-jd-g3b"/>
                            <outlet property="delegate" destination="i3m-ex-Bu1" id="Yhl-cu-y4h"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Branch-TestBed" id="eWU-bT-5CF" userLabel="Branch-TestBed"/>
                    <connections>
                        <outlet property="activityIndicator" destination="i4k-28-3dr" id="FZ3-dg-KF4"/>
                        <outlet property="branchLinkTextField" destination="SOP-3u-nhT" id="H0r-W5-wGG"/>
                        <outlet property="pointsLabel" destination="ogr-eG-5aK" id="jdK-ZI-pmu"/>
                        <outlet property="versionLabel" destination="FAw-wp-XCR" id="nMF-Ec-KfP"/>
                        <segue destination="BhN-zu-22N" kind="push" identifier="ShowCreditHistory" id="Blt-bB-ayh"/>
...
