...
                            <outlet property="delegate" destination="f9P-iX-WYi" id="s4N-ia-mEB"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" id="wHi-Gn-q4b" userLabel="Custom Event Metadata">
                        <barButtonItem key="leftBarButtonItem" style="done" systemItem="done" id="EeE-gM-yOf" userLabel="doneButton">
                            <connections>
                                <segue destination="U8c-t8-Hlk" kind="unwind" identifier="Done" unwindAction="unwindDictionaryTableViewController:" id="Y8p-9h-9Fi"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="HDN-cH-sOA" userLabel="addButton">
                            <connections>
                                <segue destination="iHK-cY-AOG" kind="presentation" identifier="AddKeyValuePair" id="c2J-aP-WKg"/>
                            </connections>
...
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="no default value" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="oR1-Ht-sjB" userLabel="ogImageURLTextField">
                                                    <rect key="frame" x="14" y="12.5" width="359" height="19"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="URL" returnKeyType="done"/>
                                                </textField>
                                            </subviews>
                                            <constraints>
                                                <constraint firstItem="oR1-Ht-sjB" firstAttribute="trailing" secondItem="jNg-Ez-iwm" secondAttribute="trailingMargin" constant="6" id="Kx6-bT-KYc"/>
                                                <constraint firstItem="oR1-Ht-sjB" firstAttribute="leading" secondItem="jNg-Ez-iwm" secondAttribute="leadingMargin" constant="6" id="RaB-Hf-0oW"/>
                                                <constraint firstItem="oR1-Ht-sjB" firstAttribute="centerY" secondItem="jNg-Ez-iwm" secondAttribute="centerY" id="kMN-wj-8QI"/>
...
