...
                                                    <rect key="frame" x="8" y="9" width="140" height="27"/>
                                                    <color key="backgroundColor" red="0.28235294119999998" green="0.2784313725" blue="0.28627450980000002" alpha="1" colorSpace="calibratedRGB"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="140" id="YVe-2M-mzn"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                    <state key="normal" title="Redeem 5 Points">
                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                    </state>
                                                    <connections>
                                                        <action selector="redeemFivePointsButtonTouchUpInside:" destination="i3m-ex-Bu1" eventType="touchUpInside" id="IsF-jl-NT1"/>
                                                    </connections>
                                                </button>
...
                                                    <rect key="frame" x="172" y="9" width="140" height="27"/>
                                                    <color key="backgroundColor" red="0.28235294119999998" green="0.2784313725" blue="0.28627450980000002" alpha="1" colorSpace="calibratedRGB"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="140" id="kcC-5q-7TI"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                    <state key="normal" title="Set User ID">
                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                    </state>
                                                    <connections>
                                                        <action selector="setUserIDButtonTouchUpInside:" destination="i3m-ex-Bu1" eventType="touchUpInside" id="dt7-xz-uQU"/>
                                                    </connections>
                                                </button>
...
                                                    <rect key="frame" x="8" y="9" width="140" height="27"/>
                                                    <color key="backgroundColor" red="0.28235294119999998" green="0.2784313725" blue="0.28627450980000002" alpha="1" colorSpace="calibratedRGB"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="140" id="ov0-yY-lnY"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                    <state key="normal" title="Refresh Rewards">
                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                    </state>
                                                    <connections>
                                                        <action selector="refreshRewardsButtonTouchUpInside:" destination="i3m-ex-Bu1" eventType="touchUpInside" id="ghF-kN-k8w"/>
                                                    </connections>
                                                </button>
...
                                                    <rect key="frame" x="172" y="9" width="140" height="27"/>
                                                    <color key="backgroundColor" red="0.28235294119999998" green="0.2784313725" blue="0.28627450980000002" alpha="1" colorSpace="calibratedRGB"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="140" id="dxd-jI-fNp"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                    <state key="normal" title="SimulateLogout">
                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                    </state>
                                                    <connections>
                                                        <action selector="logoutWithCallback" destination="i3m-ex-Bu1" eventType="touchUpInside" id="FLD-iK-q51"/>
                                                    </connections>
                                                </button>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="i3m-ex-Bu1" id="4fX-jd-g3b"/>
                            <outlet property="delegate" destination="i3m-ex-Bu1" id="Yhl-cu-y4h"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Branch-TestBed" id="eWU-bT-5CF" userLabel="Branch-TestBed"/>
                    <connections>
                        <outlet property="activityIndicator" destination="i4k-28-3dr" id="FZ3-dg-KF4"/>
                        <outlet property="branchLinkTextField" destination="SOP-3u-nhT" id="H0r-W5-wGG"/>
                        <outlet property="pointsLabel" destination="ogr-eG-5aK" id="jdK-ZI-pmu"/>
                        <outlet property="versionLabel" destination="FAw-wp-XCR" id="nMF-Ec-KfP"/>
                        <segue destination="BhN-zu-22N" kind="push" identifier="ShowCreditHistory" id="Blt-bB-ayh"/>
...
